--- a/MIS7375/style-2.css
+++ b/MIS7375/style-2.css
@@ -157,3 +157,28 @@ input[type="range"] {
 }
 
 /* End slider */
+
+/* cookie dilogue box */
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+}
+
+.popup-box {
+    background: white;
+    padding: 25px;
+    border-radius: 10px;
+    width: 300px;
+    text-align: center;
+    font-family: Arial;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+}
